--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>country information</title>
+    <script src="https://kit.fontawesome.com/42f7232704.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
